leveraging console.time and console.timeEnd

--- a/Exercise/practice/health.html
+++ b/Exercise/practice/health.html
@@ -7,7 +7,9 @@
 <body>
   <h1>Health Articles</h1>
   <div id="articles"></div>
-<script src="XHR.js"></script>
+<!-- <script src="XHR.js"></script> -->
+ <!-- <script src="fetchTodos.js"></script> -->
+  <script src="postData.js"></script>
 </body>
 
 </html>
