UI display for the js manipulation

--- a/practicals/index.html
+++ b/practicals/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="try.js"></script>
+    <!-- <script src="try.js"></script> -->
+     <!-- <script src="timeout.js"></script> -->
+     <script src="retries.js"></script>
 </head>
 <body>
     <h1>We roll with asynchronous!</h1>
